--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,9 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.132"
 dotenv = "0.15"
 config = "0.13"
+kube = { version = "0.96.0", features = ["runtime"] }
+kube-runtime = "0.96.0"
+k8s-openapi = { version = "0.23", features = ["v1_28"] }
 
 # Dependencias para el proxy y manejo de HTTP con TLS en Reqwest
 reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls"] }
