--- a/chart/templates/service.yaml
+++ b/chart/templates/service.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: {{ include "flusso-ingress-controller.name" . }}
 spec:
-  type: ClusterIP
+  type: NodePort
   ports:
     - port: 80
       targetPort: 8080
