--- a/chart/templates/service.yaml
+++ b/chart/templates/service.yaml
@@ -11,5 +11,9 @@ spec:
     - port: 80
       targetPort: 8080
       protocol: TCP
+    - port: 8081
+      targetPort: 8081
+      protocol: TCP
   selector:
     app: {{ include "flusso-ingress-controller.name" . }}
+
