--- a/chart/templates/service.yaml
+++ b/chart/templates/service.yaml
@@ -8,10 +8,12 @@ metadata:
 spec:
   type: LoadBalancer
   ports:
-    - port: 80
+    - name: main
+      port: 80
       targetPort: 8080
       protocol: TCP
-    - port: 8081
+    - name: dashboard
+      port: 8081
       targetPort: 8081
       protocol: TCP
   selector:
