--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,10 +19,12 @@ actix-web = "4.9.0"
 actix-rt = "2.10.0"
 actix-files = "0.6.6"
 actix-service = "2.0.2"
+async-trait = "0.1.83"
 
 # Serialization dependencies
 serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.132"
+schemars = "0.8.21"
 
 # Environment and configuration management
 dotenv = "0.15.0"
@@ -30,6 +32,8 @@ config = "0.14.1"
 
 # Kubernetes dependencies
 kube = { version = "0.96.0", features = ["runtime"] }
+kube-core = { version = "0.96.0", features = ["schema"] }
+kube-derive = "0.96.0"
 kube-runtime = "0.96.0"
 k8s-openapi = { version = "0.23.0", features = ["v1_28"] }
 
@@ -42,6 +46,7 @@ bytes = "1.8.0"
 
 # General utilities
 anyhow = "1.0.93"
+thiserror = "2.0.3"
 
 # TLS and certificate handling
 rustls = { version = "0.23.16", features = ["aws_lc_rs"] }
