--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -3,7 +3,7 @@ replicaCount: 1
 
 image:
   repository: diocrafts/flusso-ingress-controller
-  tag: v0.0.1
+  tag: v0.0.40
   pullPolicy: IfNotPresent
 
 serviceAccount:
@@ -20,3 +20,8 @@ ingressClass: flusso
 env:
   TLS_ENABLED: "true"
   SERVER_ADDR: "0.0.0.0:8080"
+
+apiGateway:
+  enabled: true
+  tlsEnabled: true
+  port: 8082
