--- a/api-gateway/frontend/Dockerfile
+++ b/api-gateway/frontend/Dockerfile
@@ -1,4 +1,4 @@
-# Etapa 1: Construcción de la aplicación React
+# Etapa 1: Construcción de los archivos estáticos
 FROM node:18-alpine AS builder
 WORKDIR /app
 COPY package.json package-lock.json ./
@@ -8,6 +8,6 @@ RUN npm run build
 
 # Etapa 2: Servidor Nginx para los archivos estáticos
 FROM nginx:stable-alpine
-COPY --from=builder /app/build /usr/share/nginx/html
+COPY --from=builder /app/dist /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
